--- a/index.html
+++ b/index.html
@@ -316,19 +316,18 @@
 							<div class="text-container">
 								<div class="heading-container">
 									<h1 class="heading">
-										Keep<span class="primary-col-text">
-											investing </span
-										>while
-										<span class="primary-col-text"> holding </span
-										>your<span class="primary-col-text">
-											assets.
+										Maximize<span class="primary-col-text">
+											UX </span
+										>Minimize
+										<span class="primary-col-text"> risks </span
+										>Enjoy<span class="primary-col-text">
+											DeFi
 										</span>
 									</h1>
 								</div>
 								<div class="info-container">
 									<p class="info">
-										equilibria.finance is a lending protocol, born to
-										lend and borrow at best rates available.
+										Equilibria is a lending & borrowing protocol that uses Hedera Blockchain and most advanced technologies to maximize your User Experience and all DeFi benefits while minimizing liquidations risks.
 									</p>
 									<button>Launch App</button>
 								</div>
@@ -356,12 +355,7 @@
 								</div>
 								<div class="info-container">
 									<p class="info">
-										Welcome to equilibria.finance, a decentralized
-										lending protocol that aims to offer a valuable
-										alternative from standard lending protocol. Our
-										long-term goal is to offer an all-in-one platform
-										where users can lend/borrow funds and earn
-										interests from their loans in several ways.
+										Welcome to equilibria.finance, the first lending & borrowing protocol build on Hedera Blockchain. <br> Start using equilibria to enjoy the security, low fees and high transactions speed of Hedera Blockchain.
 									</p>
 								</div>
 							</div>
@@ -389,17 +383,9 @@
 								</div>
 								<div class="info-container">
 									<p class="info">
-										Our lending protocol operates on a peer-to-peer
-										network, where borrowers and lenders can interact
-										with each other directly without intermediaries.
-										This eliminates the need for banks or other
-										financial institutions to act as intermedia- ries,
-										reducing the cost and time of lending
-										transactions. Moreover, the use of audited smart
-										contracts enables the platform to operate
-										automatically, without the need for human
-										intervention.
+										As team of equilibria, we won’t limit ourselves to build a standard Lending & Borrowing protocol. We are working really hard to develop a permisionless and arbitrary Machine Learning algorithm that minimize the liquidations events.<br> We’ll also introduce a governance with already several proposals planned, making equilibria a more democratic and decentralized platform while taking the protocol to the next level.
 									</p>
+									<button>Documentation</button>
 								</div>
 							</div>
 						</div>
