--- a/index.html
+++ b/index.html
@@ -350,7 +350,7 @@
 							<div class="text-container">
 								<div class="heading-container">
 									<h1 class="heading">
-										Decentralized. Anonymous. Safe.
+										Lend your assets on Hedera.
 									</h1>
 								</div>
 								<div class="info-container">
@@ -379,7 +379,7 @@
 							</div>
 							<div class="text-container">
 								<div class="heading-container">
-									<h1 class="heading">Enjoy all DeFi benefits.</h1>
+									<h1 class="heading">Leaders in the innovation.</h1>
 								</div>
 								<div class="info-container">
 									<p class="info">
