--- a/index.html
+++ b/index.html
@@ -385,7 +385,7 @@
 									<p class="info">
 										As team of equilibria, we won’t limit ourselves to build a standard Lending & Borrowing protocol. We are working really hard to develop a permisionless and arbitrary Machine Learning algorithm that minimize the liquidations events.<br> We’ll also introduce a governance with already several proposals planned, making equilibria a more democratic and decentralized platform while taking the protocol to the next level.
 									</p>
-									<button href="https://equilibria-finances-organization.gitbook.io/equilibria-documentation/">Documentation</button>
+									<button><a  href="https://equilibria-finances-organization.gitbook.io/equilibria-documentation/">Documentation</a></button>
 								</div>
 							</div>
 						</div>
