--- a/index.html
+++ b/index.html
@@ -316,9 +316,9 @@
 							<div class="text-container">
 								<div class="heading-container">
 									<h1 class="heading">
-										Maximize<span class="primary-col-text">
+										Seamless<span class="primary-col-text">
 											UX </span
-										>Minimize
+										>Minimal
 										<span class="primary-col-text"> risks </span
 										>Enjoy<span class="primary-col-text">
 											DeFi
@@ -327,9 +327,9 @@
 								</div>
 								<div class="info-container">
 									<p class="info">
-										Equilibria is a lending & borrowing protocol that uses Hedera Blockchain and most advanced technologies to maximize your User Experience and all DeFi benefits while minimizing liquidations risks.
+										Equilibria is a protocol born for two reasons: to provide you with the best User Experience possible through fast and seamless technologies, and to minimize liquidation risks by utilizing Machine Learning. Start your journey on Equilibria now by entering the dApp.
 									</p>
-									<button>Launch App</button>
+									<button>Launch dApp</button>
 								</div>
 							</div>
 							<div class="image-container">
@@ -350,12 +350,12 @@
 							<div class="text-container">
 								<div class="heading-container">
 									<h1 class="heading">
-										Lend your assets on Hedera.
+										Lend and Borrow. <br> Safely, fastly.
 									</h1>
 								</div>
 								<div class="info-container">
 									<p class="info">
-										Welcome to equilibria.finance, the first lending & borrowing protocol build on Hedera Blockchain. <br> Start using equilibria to enjoy the security, low fees and high transactions speed of Hedera Blockchain.
+										Welcome to Equilibria: from today, you can lend or borrow assets in an easy and secure manner, ensuring an unparalleled User Experience. With an approach based on developing only on blockchains that guarantee high performance and extremely fast execution speeds, you can experience Equilibria like no other protocol.
 									</p>
 								</div>
 							</div>
@@ -383,7 +383,7 @@
 								</div>
 								<div class="info-container">
 									<p class="info">
-										As team of equilibria, we won’t limit ourselves to build a standard Lending & Borrowing protocol. We are working really hard to develop a permisionless and arbitrary Machine Learning algorithm that minimize the liquidations events.<br> We’ll also introduce a governance with already several proposals planned, making equilibria a more democratic and decentralized platform while taking the protocol to the next level.
+										As team of equilibria, we won’t limit ourselves to build a powerful Lending & Borrowing protocol. We are working on a permisionless and arbitrary Machine Learning algorithm that minimize the liquidations events.<br> We’ll also introduce a governance with already several proposals planned, making Equilibria a more democratic and decentralized platform while taking the protocol to the next level.
 									</p>
 									<a  style="color: white; text-decoration: none; " href="https://equilibria-finances-organization.gitbook.io/equilibria-documentation/"><button>Documentation</button></a>
 								</div>
