--- a/index.html
+++ b/index.html
@@ -350,7 +350,7 @@
 							<div class="text-container">
 								<div class="heading-container">
 									<h1 class="heading">
-										Lend and Borrow. <br> Safely, fastly.
+										Lend&Borrow. <br> Safely, fastly.
 									</h1>
 								</div>
 								<div class="info-container">
