--- a/index.html
+++ b/index.html
@@ -383,7 +383,7 @@
 								</div>
 								<div class="info-container">
 									<p class="info">
-										As team of equilibria, we won’t limit ourselves to build a powerful Lending & Borrowing protocol. We are working on a permisionless and arbitrary Machine Learning algorithm that minimize the liquidations events.<br> We’ll also introduce a governance with already several proposals planned, making Equilibria a more democratic and decentralized platform while taking the protocol to the next level.
+										As team of Equilibria, we won’t limit ourselves to build a powerful Lending & Borrowing protocol. We are working on a permisionless and arbitrary Machine Learning algorithm that minimize the liquidations events.<br> We’ll also introduce a governance with already several proposals planned, making Equilibria a more democratic and decentralized platform while taking the protocol to the next level.
 									</p>
 									<a  style="color: white; text-decoration: none; " href="https://equilibria-finances-organization.gitbook.io/equilibria-documentation/"><button>Documentation</button></a>
 								</div>
