--- a/index.html
+++ b/index.html
@@ -505,14 +505,14 @@
 					</div>
 				</div>
 				<div class="fifth-container inner-container" id="4-container">
-					<div class="content-container">
-						<div class="main-content">
-							<div class="text-container">
-								<div class="heading-container">
-									<h1 class="heading">Partners With The Best.</h1>
-								</div>
+					<div class="fifth-content">
+						<div class="text-container">
+							<div class="heading-container">
+								<h1 class="heading">Partners With The Best.</h1>
 							</div>
-							<div class="image-container">
+						</div>
+						<div class="image-container">
+							<div>
 								<img
 									src="./landing-files/Logo&Icons/hedera-hbar-logo.png"
 									alt="Hedera"
@@ -521,6 +521,8 @@
 									src="./landing-files/Logo&Icons/zel-flux-logo.png"
 									alt="Zel Flux"
 								/>
+							</div>
+							<div>
 								<img
 									src="./landing-files/Logo&Icons/ocean.png"
 									alt="Ocean"
