--- a/index.html
+++ b/index.html
@@ -429,74 +429,100 @@
 				>
 					<div class="content-container">
 						<div class="main-content">
-							<div class="timeline">
-								<div class="outer">
-									<div class="card">
-										<div class="info">
-											<h3 class="title">
-												dApp Release - Q3 2023. Equilibria will go
-												live in the third quarter of 2023
-											</h3>
-											<p>
-												This version will immediately enable users to
-												lend and borrow assets on Hedera and leverage
-												the Risk Manager Model. However, it will only
-												be trained on some tokens as collateral and
-												for USDC loans.
-											</p>
-										</div>
+							<div class="mobile-screen-container">
+								<div class="title-container">
+									<h1 class="heading">
+										Sustainable and effective Roadmap.
+									</h1>
+								</div>
+								<div class="desc-text">
+									Lorem ipsum dolor sit amet consectetur adipisicing
+									elit. Rem illo doloremque amet nesciunt a eius
+									voluptatem eum, saepe officiis eos ea nisi aperiam
+									qui quae ullam ducimus dolor quo dolorum.
+								</div>
+								<div class="panel-button">
+									<button id="popup-btn">Roadmap</button>
+								</div>
+							</div>
+							<div class="popup-container">
+								<div class="popup-button-container">
+									<button id="popup-close-btn">&leftarrow;</button>
+								</div>
+								<div class="timeline">
+									<div class="timeline-title">
+										Sustainable and effective Roadmap.
 									</div>
-									<div class="card">
-										<div class="info">
-											<h3 class="title">
-												First RM ML Model Update - Q2 2024
-											</h3>
-											<p>
-												Once enough data is collected fromthe
-												protocol, we will train the model with new
-												data, making it usable with all tokens
-												available on the platform. We estimate that
-												about 6-8 months will be sufficient to
-												properly train the model, but this phase may
-												require more time for added security.
-											</p>
+									<div class="outer">
+										<div class="card">
+											<div class="info">
+												<h3 class="title">
+													dApp Release - Q3 2023. Equilibria will go
+													live in the third quarter of 2023
+												</h3>
+												<p>
+													This version will immediately enable users
+													to lend and borrow assets on Hedera and
+													leverage the Risk Manager Model. However, it
+													will only be trained on some tokens as
+													collateral and for USDC loans.
+												</p>
+											</div>
 										</div>
-									</div>
-									<div class="card">
-										<div class="info">
-											<h3 class="title">
-												Token & Governance - Q3 2024
-											</h3>
-											<p>
-												After the lending protocol and ML Model are
-												fully functional, we will focus on the native
-												platform token (to generate more attractive
-												interest rates for suppliers and borrowers)
-												and a Governance mechanism (to make the
-												platform more democratic and decentralized).
-											</p>
+										<div class="card">
+											<div class="info">
+												<h3 class="title">
+													First RM ML Model Update - Q2 2024
+												</h3>
+												<p>
+													Once enough data is collected fromthe
+													protocol, we will train the model with new
+													data, making it usable with all tokens
+													available on the platform. We estimate that
+													about 6-8 months will be sufficient to
+													properly train the model, but this phase may
+													require more time for added security.
+												</p>
+											</div>
 										</div>
-									</div>
-									<div class="card">
-										<div class="info">
-											<h3 class="title">
-												Second Update RM ML Model - Q4 2024
-											</h3>
-											<p>
-												We will release a second version of the Model,
-												and through our token, raise funds to make the
-												model more performant, update it to work with
-												loans using our own Token, and add a new
-												feature: besides suggesting the loan risk, it
-												will suggest a Borrow Limit percentage that
-												maximizes borrowed assets while minimizing
-												risks. Once the model is full-featured, we
-												intend to offer it as a B2B service to other
-												lending protocols. We will propose to the
-												Governance to allocate a percentage of the
-												profits from the model to token buybacks or to
-												an insurance fund for platform users.
-											</p>
+										<div class="card">
+											<div class="info">
+												<h3 class="title">
+													Token & Governance - Q3 2024
+												</h3>
+												<p>
+													After the lending protocol and ML Model are
+													fully functional, we will focus on the
+													native platform token (to generate more
+													attractive interest rates for suppliers and
+													borrowers) and a Governance mechanism (to
+													make the platform more democratic and
+													decentralized).
+												</p>
+											</div>
+										</div>
+										<div class="card">
+											<div class="info">
+												<h3 class="title">
+													Second Update RM ML Model - Q4 2024
+												</h3>
+												<p>
+													We will release a second version of the
+													Model, and through our token, raise funds to
+													make the model more performant, update it to
+													work with loans using our own Token, and add
+													a new feature: besides suggesting the loan
+													risk, it will suggest a Borrow Limit
+													percentage that maximizes borrowed assets
+													while minimizing risks. Once the model is
+													full-featured, we intend to offer it as a
+													B2B service to other lending protocols. We
+													will propose to the Governance to allocate a
+													percentage of the profits from the model to
+													token buybacks or to an insurance fund for
+													platform users.
+												</p>
+											</div>
 										</div>
 									</div>
 								</div>
