fixed roadmap bug

--- a/index.html
+++ b/index.html
@@ -202,70 +202,10 @@
 				>
 					<div class="navbar">
 						<div class="logo">
-							<svg
-								version="1.1"
-								id="Livello_1"
-								xmlns="http://www.w3.org/2000/svg"
-								xmlns:xlink="http://www.w3.org/1999/xlink"
-								x="0px"
-								y="0px"
-								viewBox="0 0 120 20"
-								style="enable-background: new 0 0 120 20"
-								xml:space="preserve"
-							>
-								<style type="text/css">
-									.st0 {
-										fill: none;
-										stroke: #3251bf;
-										stroke-width: 2.5;
-										stroke-miterlimit: 10;
-									}
-									.st2 {
-										font-family: "Gilroy-Black";
-									}
-									.st3 {
-										font-size: 8px;
-									}
-								</style>
-								<g>
-									<g>
-										<path
-											class="st0"
-											d="M17.5,10c-0.5,4.4-2.6,6.1-5.9,6.1c-3.2,0-5.9-2.6-5.9-5.9"
-										/>
-										<path
-											class="st0"
-											d="M17.5,10.3c0.6-4.5,2.9-6,6.2-6c3.2,0,5.6,2.6,5.6,5.9"
-										/>
-										<path
-											class="st0"
-											d="M8.7,15.3c-2.8-1.6-3.8-5.2-2.2-8s5.1-4.1,8.6-1.2l-2.2,2.6"
-										/>
-										<path
-											class="st0"
-											d="M28.9,7.9c1.1,3-0.1,5.3-2.8,7.1"
-										/>
-									</g>
-									<path
-										class="st0"
-										d="M28.1,13.2c-2.2,2.9-5,2.9-7.7,1.2"
-									/>
-									<line
-										class="st0"
-										x1="24.7"
-										y1="12.4"
-										x2="28.1"
-										y2="17.6"
-									/>
-								</g>
-
-								<text
-									transform="matrix(1 0 0 1 42.8125 12.0396)"
-									class="st2 st3"
-								>
-									equilibria.finance
-								</text>
-							</svg>
+							<img
+								src="./landing-files/Logo&Icons/LogoType.svg"
+								alt="Equilibria"
+							/>
 						</div>
 						<div class="links">
 							<div class="social-links">
@@ -436,13 +376,14 @@
 									</h1>
 								</div>
 								<div class="desc-text">
-									Lorem ipsum dolor sit amet consectetur adipisicing
-									elit. Rem illo doloremque amet nesciunt a eius
-									voluptatem eum, saepe officiis eos ea nisi aperiam
-									qui quae ullam ducimus dolor quo dolorum.
+									We have planned the Equilibria roadmap to ensure
+									technically and timely sustainable development. By
+									Q1 2025, we expect to release Equilibria in its
+									final form, unlocking its full potential. Please
+									find below the roadmap for your reference.
 								</div>
 								<div class="panel-button">
-									<button id="popup-btn">Roadmap</button>
+									<button id="popup-btn">See full Roadmap</button>
 								</div>
 							</div>
 							<div class="popup-container">
@@ -504,7 +445,7 @@
 										<div class="card">
 											<div class="info">
 												<h3 class="title">
-													Second Update RM ML Model - Q4 2024
+													Second Update RM ML Model - Q1 2025
 												</h3>
 												<p>
 													We will release a second version of the
