--- a/index.html
+++ b/index.html
@@ -620,128 +620,16 @@
 					</div>
 					<div class="footer-container">
 						<div class="footer-content">
-							<div class="logo">
-								<svg
-									viewBox="8.323 13.639 81.524 36.395"
-									style="enable-background: new 0 0 140 80"
-									xmlns="http://www.w3.org/2000/svg"
-								>
-									<defs>
-										<style type="text/css">
-											.st0 {
-												fill: none;
-											}
-											.st1 {
-												fill: #ffffff;
-												text-align: left;
-											}
-											.st2 {
-												font-family: "Gilroy-Black";
-											}
-											.st3 {
-												font-size: 8px;
-											}
-											.st4 {
-												font-family: "Gilroy-Regular";
-											}
-											.st5 {
-												font-size: 5px;
-											}
-											.st6 {
-												fill: none;
-												stroke: #ffffff;
-												stroke-width: 2.5;
-												stroke-miterlimit: 10;
-											}
-										</style>
-									</defs>
-									<rect
-										x="9.1"
-										y="34"
-										class="st0"
-										width="126.3"
-										height="29.4"
-									/>
-									<text
-										transform="matrix(1, 0, 0, 1, 9.0588, 39.5807)"
-									>
-										<tspan x="0" y="0" class="st1 st2 st3">
-											equilibria.finance
-										</tspan>
-										<tspan x="0" y="8" class="st1 st4 st5">
-											Copyright 2023. All rights are reserved.
-										</tspan>
-									</text>
-									<g>
-										<g>
-											<path
-												class="st6"
-												d="M22.8,21.6c-0.5,4.6-2.6,5.9-5.9,5.9S11,24.9,11,21.6"
-											/>
-											<path
-												class="st6"
-												d="M22.8,21.8c0.6-4.5,2.9-6,6.1-6s5.6,2.6,5.6,5.9"
-											/>
-											<path
-												class="st6"
-												d="M14,26.7c-2.8-1.6-3.8-5.2-2.2-8s5.1-4.1,8.6-1.2l-2.2,2.6"
-											/>
-											<path
-												class="st6"
-												d="M33.8,18.7c1.6,3.1,0.3,5.9-2.4,7.7"
-											/>
-										</g>
-										<path
-											class="st6"
-											d="M33.4,24.6c-2.2,2.9-5,2.9-7.7,1.2"
-										/>
-										<line
-											class="st6"
-											x1="29.9"
-											y1="23.8"
-											x2="33.4"
-											y2="29"
-										/>
-									</g>
-								</svg>
-							</div>
-							<div class="links">
-								<div class="sitemap">
-									<h2>Sitemap</h2>
-									<ul>
-										<li><a target="_blank" href="">Launch App</a></li>
-										<li><a target="_blank" href="">Analytics</a></li>
-										<li>
-											<a
-												target="_blank"
-												href="https://equilibria-finances-organization.gitbook.io/equilibria-documentation/
-											"
-												>Documentation</a
-											>
-										</li>
-									</ul>
-								</div>
-								<div class="community">
-									<h2>Community</h2>
-									<ul>
-										<li>
-											<a
-												target="_blank"
-												href="https://github.com/equilibria-finance"
-												>Github</a
-											>
-										</li>
-										<li>
-											<a
-												target="_blank"
-												href="https://discord.com/users/809888220182741022
-											"
-												>Discord</a
-											>
-										</li>
-										<li><a target="_blank" href="">Telegram</a></li>
-									</ul>
-								</div>
+							<img
+								src="./landing-files/Logo&Icons/LogoTypeWhite.svg"
+								alt="Equilibria"
+							/>
+
+							<div class="text-container">
+								Developed with ❤️ by
+								<a href="https://www.astrid.network/" target="_blank">
+									Astrid Network
+								</a>
 							</div>
 						</div>
 					</div>
